# raytracer

./: Cargo.toml  LICENSE  README.md
benches/: test_bench.rs
raytracing/: Cargo.toml  README.md  scene.json
raytracing/scenes/: mesh.json  mesh_test.json  physical.json  refraction.json  scene.json
raytracing/src/: DELETE - object3d.rs  core.rs  main.rs  object3d.rs  primitives.rs  ray_intersection.rs  raytrace.rs  scene.rs  scene_json.rs
raytracing/src/core/: bounds.rs  material.rs  mod.rs  texture.rs  transform.rs
raytracing/src/lights/: ambient.rs  mod.rs  point.rs
raytracing/src/primitives/: cube.rs  group.rs  mesh.rs  mod.rs  plane.rs  sphere.rs  triangle.rs
renders/: renders.md
scenes/: cornell_box.json  emissive.json  mesh.json  mesh_test.json  occlusion.json  physical.json  refraction.json  scene.json  test.json
scenes/benchmarks/: complex.json  simple.json
src/: lib.rs  main.rs  primitives.rs  ray_intersection.rs  render_scenes.rs  scene.rs
src/core/: bounds.rs  material.rs  mod.rs  texture.rs  transform.rs
src/lights/: ambient.rs  mod.rs  point.rs
src/primitives/: cube.rs  group.rs  mesh.rs  mod.rs  plane.rs  sphere.rs  triangle.rs
src/render/: mod.rs  raytracing_scene.rs  scene.rs
src/utils/: blur.rs  mod.rs  physical_material_equations.rs  rays.rs  sampling.rs
