[package]
name = "raytrace"
version = "1.0.0"
authors = ["DarkAce65 <tvdood99@gmail.com>"]
edition = "2018"
default-run = "raytrace"

[lib]
doctest = false
bench = false

[[bin]]
name = "raytrace"
test = false
bench = false
doc = false

[[bin]]
name = "render-scenes"
path = "src/render_scenes.rs"
test = false
bench = false
doc = false

[[bench]]
name = "test_bench"
harness = false

[profile.dev]
opt-level = 3

[dev-dependencies]
criterion = "0.3"
more-asserts = "0.2"

[dependencies]
auto_ops = "0.1"
clap = "2.33"
image = { version = "0.23", default-features = false, features = ["jpeg", "png", "jpeg_rayon"] }
indicatif = { version = "0.15", features = ["with_rayon"] }
itertools = "0.9"
minifb = "0.19"
nalgebra = { version = "0.22", features = ["serde-serialize"] }
num-traits = "0.2"
once_cell = "1.4"
rand = "0.7"
rayon = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tobj = "2.0"
