[package]
name = "raytrace"
version = "1.0.0"
authors = ["DarkAce65 <tvdood99@gmail.com>"]
edition = "2018"
default-run = "raytrace"

[lib]
doctest = false
bench = false

[[bin]]
name = "raytrace"
test = false
bench = false
doc = false

[[bin]]
name = "render-scenes"
path = "src/render_scenes.rs"
test = false
bench = false
doc = false

[[bench]]
name = "test_bench"
harness = false

[profile.dev]
opt-level = 3

[dev-dependencies]
criterion = "0.3"
more-asserts = "0.2"

[dependencies]
auto_ops = "0.3"
clap = "2.33"
image = { version = "0.23", default-features = false, features = ["jpeg", "jpeg_rayon", "png"] }
indicatif = { version = "0.16", features = ["rayon"] }
itertools = "0.10"
minifb = "0.19"
nalgebra = { version = "0.29", features = ["rand", "serde-serialize"] }
num-traits = "0.2"
once_cell = "1.8"
rand = "0.8"
rayon = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tobj = "3.1"
