[package]
name = "raytrace"
version = "0.1.0"
authors = ["DarkAce65 <tvdood99@gmail.com>"]
edition = "2018"

[profile.dev]
opt-level = 3

[dev-dependencies]
more-asserts = "0.2"

[dependencies]
clap = "2.33"
indicatif = "0.13"
minifb = "0.13"
num-traits = "0.2"
rand = "0.7"
serde_json = "1.0"
typetag = "0.1"

[dependencies.image]
version = "0.22"
default-features = false
features = ["jpeg", "png_codec", "bmp", "jpeg_rayon"]

[dependencies.nalgebra]
version = "0.19"
features = ["serde-serialize"]

[dependencies.serde]
version = "1.0"
features = ["derive"]
