[package]
name = "raytrace"
version = "0.1.0"
authors = ["DarkAce65 <tvdood99@gmail.com>"]
edition = "2018"

[profile.dev]
opt-level = 3

[dev-dependencies]
more-asserts = "0.2"

[dependencies]
clap = "2.33"
image = { version = "0.22", default-features = false, features = ["jpeg", "png_codec", "bmp", "jpeg_rayon"] }
indicatif = "0.13"
minifb = "0.16"
nalgebra = { version = "0.19", features = ["serde-serialize"] }
num-traits = "0.2"
rand = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tobj = "0.1"
typetag = "0.1"
